--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 install: true
 
 script: ./grade.sh PA1Main PublicTestCases
+
+notifications:
+  on_success: always
+  email:
+    - your.netid@email.arizona.edu
